# dynamically-gated-similarities

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  README.rst  cleanup.sh  environment.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yml  coverage.yaml  pylint.yml  wiki.yaml  wiki.yml
configs/: configs.rst  eval_dgs.yaml  eval_visual.yaml  predict_images.yaml  predict_video.yaml  simplest_tracker.yaml  train_pose.yaml  train_pose_embedding.yaml  train_visual.yaml  train_visual_similarity.yaml
configs/DGS/: eval_const_pairwise_similarities.yaml  eval_const_single_similarities.yaml  eval_const_track_weight.yaml  eval_const_triplet_similarities.yaml  eval_dgs.yaml  eval_sim_combinations.yaml  eval_sim_indep.yaml  predict_images.yaml  predict_images_trained.yaml  predict_video.yaml  test_dgs.yaml  train_dynamic_weights.yaml
configs/ReID Embedding Generation/: eval_visual.yaml  train_pose.yaml  train_visual.yaml
configs/helpers/: predict_rcnn.yaml
dgs/: __init__.py  default_config.py  default_values.py  default_values.yaml  paths.py  tracker_api.py  tracker_cfg.py
dgs/models/: __init__.py  backbone.py  bbox.py  data.py  engine.py  history_warping.py  loader.py  loss.py  metric.py  model.py  module.py  optimizer.py  pose_estimator.py  pose_state.py  reid.py  states.py
dgs/models/alpha/: __init__.py  alpha.py  combined.py  fully_connected.py
dgs/models/backbone/: __init__.py  alphapose.py  backbone.py  keypoint_rcnn.py
dgs/models/combine/: __init__.py  combine.py  dynamic.py  static.py
dgs/models/dataset/: MOT.py  __init__.py  alphapose.py  dataset.py  keypoint_rcnn.py  pose_dataset.py  posetrack.py  posetrack21.py  torchreid_pose_dataset.py
dgs/models/dgs/: __init__.py  dgs.py
dgs/models/embedding_generator/: __init__.py  embedding_generator.py  pose_based.py  reid.py  torchreid.py
dgs/models/engine/: __init__.py  dgs_engine.py  engine.py  similarity_engine.py  visual_embedding.py  visual_sim_engine.py
dgs/models/loss/: __init__.py  loss.py
dgs/models/metric/: __init__.py  metric.py
dgs/models/modules/: named.py
dgs/models/optimizer/: __init__.py  optimizer.py
dgs/models/pose_warping/: __init__.py  kalman.py  pose_warping.py
dgs/models/reid/: __init__.py  reid.py  torchreid.py
dgs/models/scheduler/: __init__.py  scheduler.py
dgs/models/similarity/: __init__.py  combined.py  pose_similarity.py  similarity.py  torchreid.py
dgs/models/submission/: MOT.py  __init__.py  posetrack21.py  submission.py
dgs/models/torchbbox/: __init__.py  bbox.py  bboxes.py
dgs/utils/: __init__.py  config.py  constants.py  data.py  exceptions.py  files.py  image.py  loader.py  matching.py  memory_long_term.py  memory_working.py  nn.py  similarity.py  state.py  states.py  timer.py  torchtools.py  track.py  types.py  utils.py  validation.py  visualization.py
docs/: Makefile  conf.py  datasets.rst  index.rst  installation.rst  metrics.rst  modules.rst  requirements_docs.txt  scripts.rst  weight_link.rst
docs/_static/css/: custom.css
docs/_templates/: class.rst  module.rst
docs/full_crop_resize_example/: alphapose-results.json  code.py  resize_crop_example.rst
docs/pkg/: model.rst  util.rst
scripts/: demo_predict.py  demo_track.py  eval_posetrack21.py  evaluate_visual_own.py  pt21_ids.py  train_pose_torchreid.py  train_posereid.py  train_torchreid.py  train_visual_own.py  train_visual_similarity_own.py  train_visual_similarity_torchreid.py  train_visual_torchreid.py  validate_visual_own.py
scripts/AlphaPose/: ap_results_to_pt21.py  results_to_csv.py
scripts/eval/: results_to_csv.py  run_eval_dance.ps1  run_eval_pt21.sh  run_everything.sh
scripts/helpers/: coverage.sh  custom_build_docs.ps1  custom_build_docs.sh  extract_bboxes_MOT.py  extract_bboxes_pt21.py  my_cleanup.sh  plot_triple_similarities.py  results_to_csv.py  run_eval_dance.ps1  run_eval_dance.sh  run_eval_pt21.sh  run_everything.sh  save_rcnn_prediction_as_MOT.py  save_rcnn_prediction_as_pt21.py  update_envs.sh
scripts/own/: eval_combined_similarities_const.py  eval_initial_weight.py  eval_pair_similarities_const.py  eval_single_similarity.py  eval_single_similarity_const.py  eval_triplet_similarities_const.py  evaluate_dgs.py  evaluate_visual.py  predict.py  predict_using_dynamic_weights.py  predict_video.py  test_dgs.py  train_dynamic_weights.py  train_visual.py  train_visual_embedding_generation.py
scripts/preprocessing/: extract_bboxes_pt21.py
scripts/torchreid/: train_pose.py  train_visual.py  train_visual_embedding_generation.py
scripts/torchreid/custom_configs/: pt21_osnet_ain_x1_0_softmax_256x192_amsgrad.yaml  pt21_osnet_x1_0_softmax_256x192_amsgrad.yaml
tests/: helper.py  requirements_test.txt  test__helper.py  test__parameterized.py
tests/models/: test__bbox.py  test__data_sample.py  test__loader.py  test__loss.py  test__metric.py  test__model.py  test__module.py  test__optimizer.py  test__pose_state.py  test__scheduler.py  test__similarity.py
tests/models/alpha/: test__alpha.py  test__combined.py  test__fc.py
tests/models/backbone/: test__keypoint_rcnn.py
tests/models/combine/: test__combine.py
tests/models/dataset/: test__dataset.py  test__keypoint_rcnn.py  test__mot.py  test__pt21.py
tests/models/dgs/: test__dgs.py
tests/models/embedding_generator/: test__combined.py  test__pose_based.py  test__torchreid_eg.py
tests/models/engine/: test__dgs_engine.py
tests/models/similarity/: test__combined.py  test__pose_similarity.py  test__similarity.py
tests/models/states/: test__data_sample.py  test__queue.py  test__track.py
tests/test_data/: kp.pt  kp_2d.pt  kp_glob.pt  license.txt  test_config.yaml
tests/test_data/MOT_test/: seqinfo.ini
tests/test_data/MOT_test_1/: seqinfo.ini
tests/test_data/images/: 11_1.pt  (+8 more)
tests/utils/: test__config.py  test__files.py  test__image.py  test__loader.py  test__nn.py  test__timer.py  test__utils.py  test__validation.py  test__visualization.py
weights/: pt21_id_map.json  weights.rst
(+15 files in other folders)
